--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -60,7 +60,7 @@ settings:
   hide-empty: false
   html: true
   indent: 2
-  lockfile: false
+  lockfile: true
   read-comments: true
   required: true
   sensitive: true
