--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,5 +5,6 @@
     "azapi-vscode.azapi",
     "ms-vscode-remote.remote-wsl",
     "ms-vscode-remote.remote-containers"
+    "davidanson.vscode-markdownlint"    
   ]
 }
