--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,4 +9,14 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/.github/workflows"
     schedule:
-      interval: daily
+      interval: 'weekly'
+      day: 'saturday'
+      time: '07:00'
+      timezone: 'Pacific/Auckland'
+  - package-ecosystem: 'terraform'
+    directory: '/' # Location of package manifests
+    schedule:
+      interval: 'weekly'
+      day: 'saturday'
+      time: '07:00'
+      timezone: 'Pacific/Auckland'
