--- a/.gitignore
+++ b/.gitignore
@@ -26,12 +26,17 @@ override.tf.json
 # Include override files you do wish to add to version control using negated pattern
 # !example_override.tf
 
+# Ignore Terraform lock file
+.terraform.lock.hcl
+
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
-
-# lock files
-**/.terraform.lock.hcl
+*tfplan*
+README-generated.md
+avm.tflint.hcl
+avm.tflint_example.hcl
+avmmakefile
