--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -15,17 +15,43 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  linting:
-    name: linting
+  docs:
+    if: github.event.repository.name != 'terraform-azurerm-avm-template'
+    name: docs
     runs-on: ubuntu-latest
     steps:
       - name: checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
 
       - name: check docs
         uses: Azure/terraform-azurerm-avm-template/.github/actions/docs-check@main
+
+  terraform:
+    if: github.event.repository.name != 'terraform-azurerm-avm-template'
+    name: terraform
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
 
       - name: lint terraform
         uses: Azure/terraform-azurerm-avm-template/.github/actions/linting@main
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+
+  avmfix:
+    if: github.event.repository.name != 'terraform-azurerm-avm-template'
+    name: avmfix
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
+
+      - name: avmfix
+        uses: Azure/terraform-azurerm-avm-template/.github/actions/avmfix@main
+
+  lintcomplete:
+    needs: [docs, terraform, avmfix]
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "All linting checks passed"
