--- a/.github/workflows/version-check.yml
+++ b/.github/workflows/version-check.yml
@@ -13,9 +13,10 @@ permissions:
 
 jobs:
   version-check:
+    if: github.event.repository.name != 'terraform-azurerm-avm-template'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
       - name: Check version
         uses: Azure/terraform-azurerm-avm-template/.github/actions/version-check@main
         with:
