--- a/.gitignore
+++ b/.gitignore
@@ -38,5 +38,12 @@ terraform.rc
 *tfplan*
 README-generated.md
 avm.tflint.hcl
+avm.tflint.merged.hcl
 avm.tflint_example.hcl
+avm.tflint_example.merged.hcl
 avmmakefile
+*.md.tmp
+.DS_Store
+avm.tflint_module.hcl
+avm.tflint_module.merged.hcl
+examples/*/policy
